--- a/src/pages/Devices/Devices.css
+++ b/src/pages/Devices/Devices.css
@@ -1,3 +1,14 @@
 .deviceListContainer{
     margin-top: 5em;
+    overflow: auto;
 }
+
+.deviceList{
+    overflow: auto;
+    max-height: 60vh;
+    min-height: 50vh;
+
+}
+.deviceList::-webkit-scrollbar {
+    display: none;
+  }
