--- a/src/components/CardRouterItem/CardRouterItem.css
+++ b/src/components/CardRouterItem/CardRouterItem.css
@@ -22,8 +22,9 @@
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
-    max-width: 12em;
-    min-width: 10em;
+    max-width: 8em;
+    min-width: 8em;
+    padding-right: 2em;
 }
 
 .cardExtended{
