Adicionado tela de informações do equipamento, filtragem por id para futuras consultas, adicionado legenda para cada informação na tela de listagem de equipamentos, alteração em alguns detalhes de estilização

--- a/src/components/CardDevicesItem/CardDevicesItem.css
+++ b/src/components/CardDevicesItem/CardDevicesItem.css
@@ -16,6 +16,8 @@
 .cardPreview{
     display: flex;
     flex-direction: row;
+    text-decoration: none;
+    color: rgb(34, 34, 34);
 }
 
 .cardContainer p{
