Mudança no layout da pagina, estilo da navbar, estilo do cabeçalho da pagina, criação de variáveis de cores

--- a/src/components/CardDevicesItem/CardDevicesItem.css
+++ b/src/components/CardDevicesItem/CardDevicesItem.css
@@ -2,7 +2,7 @@
     padding: 0.5em 1.5em;
     margin: 5px;
     border-radius: 5px;
-    background-color: #fff;
+    background-color: var(--bg-dark);
     cursor: pointer;
     transition: all 0.3s ease;
 }
@@ -17,7 +17,7 @@
     display: flex;
     flex-direction: row;
     text-decoration: none;
-    color: rgb(34, 34, 34);
+    color: var(--text-dark);
 }
 
 .cardContainer p{
