--- a/src/components/Title/Title.css
+++ b/src/components/Title/Title.css
@@ -1,12 +1,17 @@
+.titleContainer{
+    border-bottom: solid #4b4b4b 1px;
+    padding: 0.4em;
+}
+
 .titlePage{
-    font-size: 2em;
+    font-size: 1.5em;
     font-weight: 800;
     height: 1.1em;
-    color: rgb(39, 39, 39);
+    color: #fff;
 }
 
 .descriptionPage{
-    font-size: 1em;
+    font-size: 0.8em;
     font-weight: 300;
-    color: rgb(39, 39, 39);
+    color: #cacaca;
 }
