--- a/src/index.css
+++ b/src/index.css
@@ -1,23 +1,42 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap');
 
+:root {
+    /* Tema claro */
+    --bg-light: #FFFFFF;
+    --bg-light-secondary: #F5F5F5;
+    --primary-light: #1E88E5;
+    --text-light: #212121;
+    
+    /* Tema Escuro */
+    --bg-dark: #121212;
+    --bg-dark-secondary: #1D1D1D;
+    --primary-dark: #90CAF9;
+    --text-dark: #E0E0E0;
+  }
+
+
 *{
     margin: 0;
     padding: 0;
     font-family: Nunito, sans-serif;
 }
 
-.containerScreen{
+.screen{
+    background-color: var(--bg-dark-secondary);
     height: 100vh;
     width: 100vw;
+}
+
+.containerScreen{
+    height: 100%;
+    width: auto;
     display: flex;
     flex-direction: row;
-    background-color: rgb(255, 255, 255);
 }
 
 .containerScreen .alignPages{
-    padding: 1.5em;
-    background-color:   rgb(234, 232, 232);
+    padding: 0 1.5em;
     width: 100%;
-    margin: 1em 1em 1em 0;
-    border-radius: 1em;
+    height: auto;
+    margin: 1.9em 0;
 }   
