--- a/src/components/Title/Title.css
+++ b/src/components/Title/Title.css
@@ -1,12 +1,15 @@
 .titleContainer{
     border-bottom: solid #4b4b4b 1px;
     padding: 0.4em;
+    height: 3em;
+    margin-top: 1px;
+    width: 100%;
 }
 
 .titlePage{
     font-size: 1.5em;
     font-weight: 800;
-    height: 1.1em;
+    height: 1.2em;
     color: #fff;
 }
 
