--- a/src/pages/DeviceInfo/DeviceInfo.css
+++ b/src/pages/DeviceInfo/DeviceInfo.css
@@ -1,3 +1,17 @@
 .containerDashHost{
     height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.dashAlign{
+    width: 100%;
+}
+
+.dashSpaceCards{
+    height: 76vh;
+    display: flex;
+    align-items: center;
 }
