--- a/src/pages/Devices/Devices.css
+++ b/src/pages/Devices/Devices.css
@@ -1,3 +1,13 @@
+.screenDevices{
+  display: flex;
+  flex-direction: row;
+}
+
+.devicesContainer{
+  width: 100%;
+  padding-left: 1em;
+}
+
 .deviceListContainer{
     margin-top: 5em;
     overflow: auto;
